# hr-haskell

./: CHANGELOG.md  LibOA.hs  Makefile  README.md  VENDOR.md  cabal-8.2.2.project  cabal-9.4.5.project  cabal-9.8.1.project  cabal-bounds-lower.project  cabal-bounds-upper.project  cabal.project  default.nix  horizontal-rule.cabal  hr.cabal  hr.hs  hr.nix  nix.md  shell.nix  stack-8.10.2.yaml  stack-8.10.7.yaml  stack-9.0.1.yaml  stack-9.10.1.yaml  stack-9.2.1.yaml  stack-9.2.3.yaml  stack-9.2.4.yaml  stack-9.2.5.yaml  stack-9.2.8.yaml  stack-9.4.2.yaml  stack-9.4.3.yaml  stack-9.4.4.yaml  stack-9.4.5.yaml  stack-9.4.7.yaml  stack-9.4.8.yaml  stack-9.6.1.yaml  stack-9.6.2.yaml  stack-9.6.3.yaml  stack-9.6.4.yaml  stack-9.6.5.yaml  stack-9.6.6.yaml  stack-9.8.1.yaml  (+5 more)
.github/workflows/: ci.yml
app/: LibOA.hs  Main.hs
doc/: hr.1  hr.1.md
example/: .gitignore  Main.hs  README.md  cabal.project  default.nix  hr-example.cabal  shell.nix  stack.yaml
pkg/deb/: Makefile  copyright
project/: TODO.md
project/log/: 20191229-design.md
project/release/: hr-haskell-0.1.0.0.md  hr-haskell-0.1.0.1.md  hr-haskell-0.1.0.2.md  hr-haskell-0.1.0.3.md  hr-haskell-0.2.0.0.md  hr-haskell-0.2.0.1.md  hr-haskell-0.3.0.0.md  hr-haskell-0.3.0.1.md  hr-haskell-0.4.0.0.md  hr-haskell-0.5.0.0.md  hr-haskell-0.6.0.0.md  hr-haskell-0.7.0.0.md
src/: HR.hs
src/HR/Monad/: Terminal.hs
test/: Spec.hs
test/HR/: Mock.hs  Test.hs
