cabal-version:      3.0
name:               horizontal-rule
version:            0.6.0.0
synopsis:           horizontal rule for the terminal
description:
  This package provides a utility for displaying a horizontal rule in a
  terminal.  Please see the README on GitHub at
  <https://github.com/ExtremaIS/hr-haskell#readme>.
homepage:           https://github.com/ExtremaIS/hr-haskell#readme
bug-reports:        https://github.com/ExtremaIS/hr-haskell/issues
license:            MIT
license-file:       LICENSE
author:             Travis Cardwell <travis.cardwell@extrema.is>
maintainer:         Travis Cardwell <travis.cardwell@extrema.is>
copyright:          Copyright (c) 2019-2024 Travis Cardwell
category:           Utils
build-type:         Simple

extra-doc-files:
  CHANGELOG.md
  README.md

tested-with:
  GHC ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.8
   || ==9.4.8
   || ==9.6.6
   || ==9.8.2

source-repository head
  type: git
  location: https://github.com/ExtremaIS/hr-haskell.git

-- This flag is referenced in the Stack build-constraints.yaml configuration.
flag optparse-applicative_ge_0_18
  description: Use optparse-applicative 0.18 or newer
  default: False
  manual: False

library
  hs-source-dirs: src
  exposed-modules:
      HR
    , HR.Monad.Terminal
  other-modules:
      Paths_horizontal_rule
  autogen-modules:
      Paths_horizontal_rule
  build-depends:
      base >=4.13.0.0 && <4.20
    , terminal-size >=0.3.2.1 && <0.4
    , text >=1.2.4.0 && <2.2
  default-language: Haskell2010
  default-extensions:
      OverloadedStrings
  ghc-options: -Wall

executable hr
  hs-source-dirs: app
  main-is: Main.hs
  other-modules:
      LibOA
  build-depends:
      base
    , horizontal-rule
    , text
    , time >=1.9.3 && <1.15
  if flag(optparse-applicative_ge_0_18)
    build-depends:
        optparse-applicative >=0.18 && <0.19
      , prettyprinter >=1.7.1 && <1.8
  else
    build-depends:
        ansi-wl-pprint >=0.6.9 && <1.1
      , optparse-applicative >=0.15.1.0 && <0.18
  default-language: Haskell2010
  ghc-options: -Wall

test-suite horizontal-rule-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
      HR.Mock
    , HR.Test
  build-depends:
      base
    , HMock >=0.5.1.0 && <0.6
    , horizontal-rule
    , tasty >=1.2.3 && <1.6
    , tasty-hunit >=0.10.0.3 && <0.11
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
