name:           hr
version:        0.3.0.0
category:       Utils
synopsis:       horizontal rule for the terminal
description:
  This package provides a utility for displaying a horizontal rule in a
  terminal.  Please see the README on GitHub at
  <https://github.com/ExtremaIS/hr-haskell#readme>.

homepage:       https://github.com/ExtremaIS/hr-haskell#readme
bug-reports:    https://github.com/ExtremaIS/hr-haskell/issues
author:         Travis Cardwell <travis.cardwell@extrema.is>
maintainer:     Travis Cardwell <travis.cardwell@extrema.is>
copyright:      Copyright (c) 2019-2021 Travis Cardwell
license:        MIT
license-file:   LICENSE

cabal-version:  >=1.10
build-type:     Simple
tested-with:
  GHC ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.4
   || ==8.10.4
   || ==9.0.1

extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/ExtremaIS/hr-haskell.git

flag write-hie
  description: write .hie files
  default: False

library
  hs-source-dirs: src
  exposed-modules:
      HR
  other-modules:
      Paths_hr
  build-depends:
      base >=4.7 && <5
    , terminal-size >=0.3 && <0.4
    , text >=1.2.3 && <1.3
  default-language: Haskell2010
  default-extensions:
      OverloadedStrings
  if flag(write-hie)
    ghc-options: -Wall -fwrite-ide-info -hiedir=.hie
  else
    ghc-options: -Wall

executable hr
  hs-source-dirs: app
  main-is: Main.hs
  other-modules:
      LibOA
  build-depends:
      ansi-wl-pprint >=0.6 && <0.7
    , base
    , hr
    , optparse-applicative >=0.14 && <0.17
    , text
    , time >=1.8 && <1.10
  default-language: Haskell2010
  ghc-options: -Wall

test-suite hr-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
      HR.Test
  build-depends:
      base
    , hr
    , tasty >=1.0 && <1.5
    , tasty-hunit >=0.10 && <0.11
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
