name:           hr-example
version:        0.0.0.0

copyright:      Copyright (c) 2019-2021 Travis Cardwell
license:        MIT
license-file:   LICENSE

cabal-version:  1.24
build-type:     Simple

extra-source-files:
  README.md

executable hr-example
  main-is: Main.hs
  build-depends:
      base
    , hr
  default-language: Haskell2010
  ghc-options: -Wall
